[gd_scene load_steps=4 format=3 uid="uid://bqpg0ue4l0dma"]

[ext_resource type="Script" uid="uid://d01fix2uj1nx1" path="res://components/DataInputs/DataInputBitFlags/DataInputBitFlags.gd" id="1_dbi2m"]
[ext_resource type="StyleBox" uid="uid://cftl4b5dnt57b" path="res://assets/styles/ResolveBoxBGLess.tres" id="2_4v1rf"]
[ext_resource type="Texture2D" uid="uid://cauhar0guyod0" path="res://assets/icons/UnfoldMore.svg" id="3_4qght"]

[node name="DataInputBitFlags" type="PanelContainer"]
custom_minimum_size = Vector2(0, 50)
offset_right = 354.0
offset_bottom = 59.0
script = ExtResource("1_dbi2m")

[node name="Outline" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 1
theme_override_styles/panel = ExtResource("2_4v1rf")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(0, 49)
layout_mode = 2

[node name="Label" type="Label" parent="VBox/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
vertical_alignment = 1

[node name="FlagLabel" type="Label" parent="VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 1
text = "
"
vertical_alignment = 1

[node name="Expand" type="Button" parent="VBox/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
toggle_mode = true
icon = ExtResource("3_4qght")
flat = true

[node name="ButtonContainer" type="VBoxContainer" parent="VBox"]
visible = false
layout_mode = 2

[connection signal="toggled" from="VBox/HBoxContainer/Expand" to="." method="_on_expand_toggled"]
